--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investir em Cabo Verde | Guia do Investidor da Diáspora</title>
-    <!-- This is the crucial link to your stylesheet -->
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -47,7 +46,7 @@
         </section>
 
         <!-- =======================
-        WHY INVEST SECTION
+        WHY INVEST SECTION (NEW DESIGN)
         ======================== -->
         <section class="why-invest-section" id="why-invest">
             <div class="container">
@@ -55,6 +54,7 @@
                 <p class="section-subtitle fade-in">
                     Cape Verde has an attractive and investment-friendly business environment, with several strategic advantages that strengthen investor confidence:
                 </p>
+
                 <div class="reasons-grid">
                     <div class="reason-item fade-in">
                         <img src="./images/icon-location.svg" alt="Strategic Location Icon">
@@ -100,11 +100,107 @@
             </div>
         </section>
 
-        <!-- Other sections continue here... -->
-        
+        <!-- =======================
+        OPPORTUNITIES SECTION
+        ======================== -->
+        <section class="info-section alternate-bg" id="opportunities">
+            <div class="container">
+                <h2 class="fade-in">Oportunidades de Negócio</h2>
+                <div class="opportunities-grid">
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/agronegocio.jpg');"><div class="card-overlay"><h3>Agronegócio</h3><p>Produção agrícola, criação de gado e produção de alimentos.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/industria.jpg');"><div class="card-overlay"><h3>Indústria</h3><p>Transformação de produtos alimentares, produção de bebidas e têxteis.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/economia-digital.jpg');"><div class="card-overlay"><h3>Economia Digital</h3><p>Startups tecnológicas, serviços de TI e inovação digital.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/turismo.jpg');"><div class="card-overlay"><h3>Turismo</h3><p>Desenvolvimento de hotéis, ecoturismo, turismo cultural e de saúde.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/economia-verde.jpg');"><div class="card-overlay"><h3>Economia Verde</h3><p>Energias renováveis, gestão de resíduos e conservação ambiental.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/economia-azul.jpg');"><div class="card-overlay"><h3>Economia Azul</h3><p>Investimentos na pesca, aquacultura, e turismo marítimo.</p></div></a>
+                </div>
+            </div>
+        </section>
+
+        <!-- =======================
+        HOW TO INVEST SECTION
+        ======================== -->
+        <section class="info-section" id="how-to-invest">
+            <div class="container content-split">
+                <div class="text-content fade-in">
+                    <h2>Como Investir?</h2>
+                    <p>Para investir em Cabo Verde, siga estes passos:</p>
+                    <ol class="steps-list">
+                        <li><strong>Preparação:</strong> Pesquisar oportunidades e entender o mercado.</li>
+                        <li><strong>Planejamento:</strong> Desenvolver um plano de negócios detalhado.</li>
+                        <li><strong>Registro:</strong> Registrar a empresa e obter as licenças necessárias.</li>
+                        <li><strong>Financiamento:</strong> Explorar opções, incentivos fiscais e subsídios.</li>
+                        <li><strong>Execução:</strong> Implementar o plano, contratar pessoal e iniciar operações.</li>
+                        <li><strong>Suporte Continuado:</strong> Utilizar serviços de apoio como a Cabo Verde TradeInvest.</li>
+                    </ol>
+                </div>
+                <div class="image-collage fade-in">
+                    <img src="./images/how-to-1.jpg" alt="Paisagem"><img src="./images/how-to-2.jpg" alt="Praia"><img src="./images/how-to-3.jpg" alt="Caminhada">
+                </div>
+            </div>
+        </section>
+
+        <!-- =======================
+        DOWNLOAD SECTION
+        ======================== -->
+        <section class="info-section alternate-bg" id="download">
+            <div class="container content-split">
+                <div class="text-content fade-in">
+                    <h2>Download</h2>
+                    <p>Faça o download do "Guia do Investidor da Diáspora" para obter todas as informações necessárias para iniciar o seu investimento em Cabo Verde.</p>
+                    <div class="download-buttons">
+                        <button class="download-btn" data-lang="pt">Português</button>
+                        <button class="download-btn" data-lang="en">English</button>
+                        <button class="download-btn" data-lang="fr">French</button>
+                    </div>
+                </div>
+                <div class="image-content fade-in">
+                    <img src="./images/download-cover.jpg" alt="Capa do Guia">
+                </div>
+            </div>
+        </section>
+
+        <!-- =======================
+        PARTNERS SECTION
+        ======================== -->
+        <section class="info-section" id="partners">
+            <div class="container">
+                <h2 class="fade-in">Nossos Parceiros</h2>
+                <div class="partners-logos fade-in">
+                    <img src="./images/logo-partner-1.png" alt="Logo"><img src="./images/logo-partner-2.png" alt="Logo"><img src="./images/logo-partner-3.png" alt="Logo"><img src="./images/logo-partner-4.png" alt="Logo"><img src="./images/logo-partner-5.png" alt="Logo">
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- =======================
+    FOOTER
+    ======================== -->
+    <footer class="site-footer-bottom">
+        <div class="container">
+            <p>© 2024 Investidor da Diáspora. Todos os direitos reservados.</p>
+            <p>Precisa de ajuda? <a href="mailto:contato@investidordadiaspora.cv">contato@investidordadiaspora.cv</a></p>
+        </div>
+    </footer>
+
+    <!-- =======================
+    DOWNLOAD MODAL (Hidden by default)
+    ======================== -->
+    <div id="downloadModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">×</span>
+            <h3>Download do Guia</h3>
+            <p>Por favor, insira o seu email para receber o link para download.</p>
+            <form id="downloadForm">
+                <input type="email" id="emailInput" placeholder="seu.email@exemplo.com" required>
+                <input type="hidden" id="langInput" value="">
+                <button type="submit">Receber o Guia</button>
+            </form>
+            <p id="formMessage" class="form-message"></p>
+        </div>
+    </div>
     
-    <!-- Link to the JavaScript file before the closing body tag -->
+    <!-- Link to the JavaScript file -->
     <script src="script.js"></script>
 
 </body>
